# libjeff

./: CHANGELOG.md  CMakeLists.txt  README.md  run.sh
app/: CMakeLists.txt  add_time2date.cpp  line_match.cpp
seed/always/: arithmetic.JEFFC  arithmetic.JEFFH  date_time.JEFFC  date_time.JEFFH  debug_mode.JEFFC  debug_mode.JEFFH  earth.JEFFC  earth.JEFFH  error_code.JEFFH  file_check.JEFFC  file_check.JEFFH  file_handler.JEFFC  file_handler.JEFFH  geo_constants.JEFFH  global_settings.JEFFC  global_settings.JEFFH  physics_constants.JEFFH  sorting.JEFFC  sorting.JEFFH  string_man.JEFFC  string_man.JEFFH  tags.JEFFC  tags.JEFFH  tbf.JEFFH  tools.JEFFC  tools.JEFFH  vector.JEFFC  vector.JEFFH
seed/gpu/: bessel.JEFFC  bessel.JEFFH  cloud.JEFFC  cloud.JEFFH  cuda_setting.JEFFC  cuda_setting.JEFFH  cuda_tools.JEFFC  cuda_tools.JEFFH  h2o_mpm93.JEFFC  h2o_mpm93.JEFFH  lbl_scatterer.JEFFC  lbl_scatterer.JEFFH  lineshape.JEFFC  lineshape.JEFFH  liquid_water.JEFFC  liquid_water.JEFFH  mie-scattering.JEFFC  mie-scattering.JEFFH  o2_mpm93.JEFFC  o2_mpm93.JEFFH  optimization.JEFFC  optimization.JEFFH  rain_droplet.JEFFC  rain_droplet.JEFFH  scatterer.JEFFC  scatterer.JEFFH
seed/mathstat/: complex.JEFFH  numerical_schemes.JEFFC  numerical_schemes.JEFFH  polygon.JEFFC  polygon.JEFFH
seed/scientific/: advection_scheme.JEFFC  advection_scheme.JEFFH  aws_data.JEFFC  aws_data.JEFFH  bufr_tools.JEFFC  bufr_tools.JEFFH  cinrad_header.JEFFH  complex.JEFFC  data_analytics.JEFFH  data_bank.JEFFC  data_bank.JEFFH  flight_data.JEFFC  flight_data.JEFFH  flight_data_analytics.JEFFC  flight_data_analytics.JEFFH  flight_route.JEFFC  flight_route.JEFFH  geometry.JEFFC  geometry.JEFFH  geos_grid.JEFFC  geos_grid.JEFFH  gpio_raspberry.JEFFC  gpio_raspberry.JEFFH  grib_tools.JEFFC  grib_tools.JEFFH  grid_codes.JEFFH  grid_data.JEFFC  grid_data.JEFFH  grid_data_field.JEFFC  grid_data_field.JEFFH  halo_lidar_header.JEFFH  himawari_standard_header.JEFFH  hrit_header.JEFFH  integer_grid.JEFFC  integer_grid.JEFFH  iris_header.JEFFH  jma_geos_grid.JEFFC  jma_geos_grid.JEFFH  lambertConN_grid.JEFFC  lambertConN_grid.JEFFH  (+56 more)
seed/xgboost/: fuel_model.JEFFC  fuel_model.JEFFH  xgboostmodel.JEFFC  xgboostmodel.JEFFH
