link_directories(${PROJECT_SOURCE_DIR}/src/)
add_executable(add_time2date.x add_time2date.cpp)
#add_library(libjeff add_time2date.x)
target_include_directories(add_time2date.x PUBLIC "${PROJECT_SOURCE_DIR}/include/")
list(APPEND LINKFLAG "-ljeff")
if(SCIENTIFIC)
  list(APPEND LINKFLAG "-L${GSL_PREFIX}/lib/ -lgsl -lgslcblas")
endif()
IF(EXTERNAL)
  list(APPEND LINKFLAG "-L${libssh_LIB_DIR} -lssh ${ZLIB_LIBRARY} ${BZIP2_LIBRARY}")
endif()
list(JOIN LINKFLAG " " LINKFLAG)
message(STATUS "Linkflag ${LINKFLAG}")
target_link_libraries(add_time2date.x PUBLIC "${LINKFLAG}")
