link_directories(${PROJECT_SOURCE_DIR}/src/)

list(APPEND LINKFLAG "-ljeff")
if(SCIENTIFIC)
  list(APPEND LINKFLAG "-L${GSL_PREFIX}/lib/ -lgsl -lgslcblas")
endif()
IF(EXTERNAL)
  list(APPEND LINKFLAG "-L${libssh_LIB_DIR} -lssh ${ZLIB_LIBRARY} ${BZIP2_LIBRARY}")
endif()
list(JOIN LINKFLAG " " LINKFLAG)

#list(APPEND INCLUDELIST "${PROJECT_SOURCE_DIR}/include/")
#IF(EXTERNAL)
#  list(APPEND INCLUDELIST "${libssh_INCLUDE_DIR}")
#endif()
#list(JOIN INCLUDELIST " " INCLUDELIST)

message(STATUS "Includelist ${INCLUDELIST}")
message(STATUS "Linkflag ${LINKFLAG}")
add_executable(add_time2date.x add_time2date.cpp)
#add_library(libjeff add_time2date.x)
target_include_directories(add_time2date.x PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(add_time2date.x PUBLIC "${LINKFLAG}")

add_executable(line_match.x line_match.cpp)
target_include_directories(line_match.x PUBLIC "${PROJECT_SOURCE_DIR}/include/")
IF(EXTERNAL)
  target_include_directories(line_match.x PUBLIC "${libssh_INCLUDE_DIR}")
endif()
target_link_libraries(line_match.x PUBLIC "${LINKFLAG}")
